# famistudio-convert

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
famistudio-converter/core/: __init__.py  arpeggio.py  channel.py  expansion.py  project.py  projet.py  sample.py  song.py
famistudio-converter/core/instruments/: __init__.py  espm.py  instrument.py  vrc7.py  wave_type.py
famistudio-converter/core/notes/: __init__.py  musical.py  types.py
famistudio_convert/: __init__.py  logging.py
famistudio_convert/conversion/: __init__.py  converter.py  pattern.py  text_converter.py  types.py
famistudio_convert/conversion/fields/: field.py
famistudio_convert/conversion/meta/: meta.py
famistudio_convert/core/: __init__.py  conditional.py  maybe.py  pattern.py
famistudio_convert/core/instruments/: instrument.py
famistudio_convert/core/meta/: __init__.py  meta.py  register.py
famistudio_convert/core/notes/: simple.py
famistudio_convert/data/: __init__.py  famistudio_text.txt
famistudio_convert/engine/: __init__.py  envelope.py  expansion.py  pattern.py  project.py  sample.py  song.py
famistudio_convert/engine/instruments/: instrument.py
famistudio_convert/engine/notes/: _core.py  simple.py
famistudio_converter/: __init__.py
famistudio_converter/conversion/meta/: __init__.py  register.py
famistudio_converter/core/: __init__.py
famistudio_converter/core/instruments/: fds.py  namco163.py  vrc6.py
famistudio_converter/core/notes/: note.py  special.py
tests/: conftest.py
tests/core/: test_envelope.py
(+16 files in other folders)
