[tool.poetry]
name = "template_repo"
version = "0.1.0"
description = ""
authors = ["TheJoeSmo <joesmo.joesmo12@gmail.com>"]
readme = "README.md"
license = "GPL3"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
